--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,8 @@
           </li>
         <% end %>
         <% if current_user %>
-          <li class="has-dropdown">
-            <a href="#">Admin</a>
-            <ul class="dropdown">
-              <li>
-                <%= link_to 'Sign out', sign_out_path %>
-              </li>
-            </ul>
+          <li>
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
           </li>
         <% end %>
       </ul>
