--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,25 +1,20 @@
 <h1>Listing Pictures</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="row">
+  <div class="small-6 small-centered columns">
     <% @pictures.each do |picture| %>
-      <tr>
-        <td><%= picture.description %></td>
-        <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="panel">
+      <%= image_tag(picture.image.url(:medium)) %>
+      <br>
+      <%= picture.description %>
+      <br>
+      <small>
+      <%= link_to 'Show', picture %>
+      <%= link_to 'Edit', edit_picture_path(picture) %>
+      <%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </small>
+    </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Picture', new_picture_path %>
+    <br>
+    <%= button_to "New Picture", new_picture_path, :class => "button round button success button expand", method: :get  %>
+  </div>
+</div>
