--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New Picture</h1>
 
+<%= form_for @picture, url: pictures_path, html: { multipart: true } do |form| %>
+  <%= form.file_field :image %>
+<% end %>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', pictures_path %>
