POC cont. Foundation Icon with label

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,27 +45,10 @@
   <!--</nav>-->
   <!-- END ORIGINAL -->
   <!--  BEGIN ICON -->
-  <div class="icon-bar five-up">
+  <div class="icon-bar three-up">
     <li><%= link_to new_picture_path do %> <i class="fi-social-facebook"></i> <% end %></li>
     <li><%= link_to new_picture_path do %><span class="fi-social-facebook"></span> New Pic <% end %></li>
-
-
-    <a class="item">
-      <img src="../assets/img/images/foundation-icons/svgs/fi-bookmark.svg" >
-      <label>Bookmark</label>
-    </a>
-    <a class="item">
-      <img src="../assets/img/images/fi-info.svg" >
-      <label>Info</label>
-    </a>
-    <a class="item">
-      <img src="../assets/img/images/fi-mail.svg" >
-      <label>Mail</label>
-    </a>
-    <a class="item">
-      <img src="../assets/img/images/fi-like.svg" >
-      <label>Like</label>
-    </a>
+    <li><%= link_to new_picture_path do %><span class="fi-social-facebook"></span><label>Info</label><% end %></li>
   </div>
   <!--  END ICON -->
   <!-- Flash Section -->
