--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,8 @@
-<br>
-<%= image_tag(@picture.image.url(:medium)) %>
-
-<br>
-<br>
-
-<h5>Description:</h5>
-<div class="panel">
-  <%= @picture.description %>
-</div>
 <%= form_for [@picture, @comment] do |f| %>
   <% if @comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+
       <ul>
         <% @comment.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -20,28 +11,12 @@
     </div>
   <% end %>
 
-  <h5>Comment:</h5>
   <div class="field">
+    <% @picture %>-->
+    <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
-<% end %>
-
-<%= link_to 'Edit', edit_picture_path(@picture) %> |
-<%= link_to 'Back', pictures_path %>
-
-<br>
-<br>
-
-<h5>Comments:</h5>
-<% if @picture.comments.any? %>
-  <% @picture.comments.each do |comment| %>
-    <div class="panel">
-      <%= comment.body %>
-    </div>
-  <% end %>
-<% else %>
-  <p>No comments yet</p>
 <% end %>
